--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Show files in folder</h1>
+    <form onsubmit="return remote.attachElement(this.path.value)">
+      Path:<br>
+      <input type="text" name="path"><br>
+      <input type="submit" value="Submit">
+    </form>
+    <div class="filelist">
+    </div>
+    <br>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using node <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
@@ -14,6 +22,7 @@
 
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
+    var remote = require('./renderer.js');
+    console.log(remote);
   </script>
 </html>
