--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Show files in folder</h1>
-    <form onsubmit="return remote.attachElement(this.path.value)">
+    <form onsubmit="return renderer.attachElement(this.path.value)">
       Path:<br>
       <input type="text" name="path"><br>
       <input type="submit" value="Submit">
@@ -22,7 +22,6 @@
 
   <script>
     // You can also require other files to run in this process
-    var remote = require('./renderer.js');
-    console.log(remote);
+    var renderer = require('./renderer.js');
   </script>
 </html>
