--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 
   <script>
     // You can also require other files to run in this process
-    var renderer = require('./renderer.js');
+    const renderer = require('./renderer.js');
   </script>
 </html>
