--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Organizer</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/photon.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+
+  <body>
+    <!-- Wrap your entire app inside .window -->
+    <div class="window">
+      <!-- .toolbar-header sits at the top of your app -->
+
+      <!-- Your app's content goes inside .window-content -->
+      <div class="window-content">
+        <div class="padded-more">
+          <div class="start-button">
+            <button id="select-directory" class="btn btn-positive btn-large">Show files in folder</button>
+          </div>
+          <div id="selected-directory">
+          </div>
+          <div id="statistics">
+          </div>
+          <div class="dicom-sort">
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script>
+    // require("./renderer.js")
+    (function() {
+      const script = document.createElement('script');
+      script.src = (process.env.HOT) ? 'http://localhost:8080/build/app.bundle.js' : 'build/app.bundle.js';
+      document.write(script.outerHTML);
+    }());
+  </script>
+</html>
+
+
+
+<!--html>
+  <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <script >
   </head>
   <body>
     <h1>Show files in folder</h1>
@@ -19,7 +62,6 @@
       </div>
     </div>
     <br>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using node <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
@@ -33,4 +75,4 @@
       document.write(script.outerHTML);
     }());
   </script>
-</html>
+</html-->
