Added data format and save and export page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a class="active"><span class="fa fa-check"></span>Upload Data</a>
 			<a href=""><span class="fa fa-circle-o"></span>Select Format</a>
 			<a href=""><span class="fa fa-circle-o"></span>Organize Data</a>
-			<a href=""><span class="fa fa-circle-o"></span>Save &amp; Upload</a>
+			<a href=""><span class="fa fa-circle-o"></span>Save &amp; Export Data</a>
 		</div>
 	</header>
 
@@ -32,7 +32,7 @@
 	</section> -->
 
 	<!-- Select Format -->
-	<section class="format">
+	<!-- <section class="format">
 		<div class="center">
 			<h1>Select your format</h1>
 			<div class="card half">
@@ -56,6 +56,23 @@
 					<span class="level-3">Project</span>
 				</div>
 				<a href="" class="button primary">Select SciTran Format</a>
+			</div>
+		</div>
+	</section> -->
+
+	<!-- Save & Upload -->
+	<section class="format">
+		<div class="center">
+			<h1>Save &amp; Export Data</h1>
+			<div class="card half">
+				<h2>Save to Hard Drive</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+				<a href="" class="button primary">Save to Hard Drive</a>
+			</div>
+			<div class="card half">
+				<h2>Upload to Flywheel.io</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+				<a href="" class="button secondary">Upload to Flwheel.io</a>
 			</div>
 		</div>
 	</section>
