--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</section> -->
 
 	<!-- Save & Upload -->
-	<section class="format">
+	<!-- <section class="format">
 		<div class="center">
 			<h1>Save &amp; Export Data</h1>
 			<div class="card half">
@@ -72,6 +72,27 @@
 			<div class="card half">
 				<h2>Upload to Flywheel.io</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+				<a href="" class="button secondary">Upload to Flwheel.io</a>
+			</div>
+		</div>
+	</section> -->
+
+	<!-- Save & Upload -->
+	<section class="format">
+		<div class="center">
+			<h1>Save &amp; Export Data</h1>
+			<div class="card">
+				<h2>Upload to Flywheel.io</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+				<div class="form-group">
+					<label for="url">Flywheel URL</label>
+					<input type="text" id="url">
+				</div>
+				<div class="form-group">
+					<label for="url">Flywheel Login</label>
+					<a href="" class="button primary">Sign in with Google</a>
+				</div>
+				<div class="margin-40"></div>
 				<a href="" class="button secondary">Upload to Flwheel.io</a>
 			</div>
 		</div>
