Added organize page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</section> -->
 
 	<!-- Save & Upload -->
-	<section class="format">
+	<!-- <section class="format">
 		<div class="center">
 			<h1>Save &amp; Export Data</h1>
 			<div class="card">
@@ -95,6 +95,112 @@
 				<div class="margin-40"></div>
 				<a href="" class="button secondary">Upload to Flwheel.io</a>
 			</div>
+		</div>
+	</section> -->
+
+	<!-- Organize Data -->
+	<section class="organize">
+		<div class="list">
+			<div class="toggle">
+				<h3><span class="fa fa-sort-up"></span>Project Name<span class="fa fa-pencil"></span></h3>
+				<div class="content">
+					<table class="clickable">
+						<thead>
+							<th width="20"><input type="checkbox"></th>
+							<th>Session Name</th>
+							<th width="200"># of Aquisitions</th>
+						</thead>
+						<tr>
+							<td><input type="checkbox"></td>
+							<td><span class="fa fa-sort-down"></span>Example</td>
+							<td>Example</td>
+						</tr>
+						<tr>
+							<td><input type="checkbox"></td>
+							<td><span class="fa fa-sort-down"></span>Example</td>
+							<td>Example</td>
+						</tr>
+						<tr>
+							<td><input type="checkbox"></td>
+							<td><span class="fa fa-sort-up"></span>Example</td>
+							<td>Example</td>
+							<tr class="no-click">
+								<td colspan="3">
+									<table>
+										<thead>
+											<th width="20"><input type="checkbox"></th>
+											<th>Aquisition Name</th>
+											<th>File Type</th>
+											<th width="200">Actions</th>
+										</thead>
+										<tr>
+											<td width="20"><input type="checkbox"></td>
+											<td>fMRI_Example_1</td>
+											<td>DICOM</td>
+											<td><span class="fa fa-download"></span></td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</tr>
+						<tr>
+							<td><input type="checkbox"></td>
+							<td><span class="fa fa-sort-down"></span>Example</td>
+							<td>Example</td>
+						</tr>
+						<tr>
+							<td><input type="checkbox"></td>
+							<td><span class="fa fa-sort-down"></span>Example</td>
+							<td>Example</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<div class="toggle">
+				<h3><span class="fa fa-sort-down"></span>Another Project Name<span class="fa fa-pencil"></span></h3>
+			</div>
+			<div class="toggle">
+				<h3><span class="fa fa-sort-down"></span>Third Project Goes Right Here<span class="fa fa-pencil"></span></h3>
+			</div>
+			<div class="toggle">
+				<h3><span class="fa fa-sort-down"></span>And a Fourth<span class="fa fa-pencil"></span></h3>
+			</div>
+			<div class="toggle">
+				<h3><span class="fa fa-sort-down"></span>Last But Not Least<span class="fa fa-pencil"></span></h3>
+			</div>
+		</div>
+		<div class="sidebar">
+			<h2>Filter &amp; Sort</h2>
+			<div class="form-group">
+				<label for="search">Search</label>
+				<input type="text" placeholder="ie: example project">
+			</div>
+			<div class="form-group">
+				<label>Example</label>
+				<select>
+					<option>Select option</option>
+					<option>Example1</option>
+					<option>Example2</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label>Example</label>
+				<select>
+					<option>Select option</option>
+					<option>Example1</option>
+					<option>Example2</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label>Example</label>
+				<select>
+					<option>Select option</option>
+					<option>Example1</option>
+					<option>Example2</option>
+				</select>
+			</div>
+			<a href="" class="button primary">Action Button</a>
+			<a href="" class="button">Reset Filters</a>
 		</div>
 	</section>
 
