Commented out organize page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</header>
 
 	<!-- Upload -->
-	<!-- <section class="upload">
+	<section class="upload">
 		<div class="center">
 			<h1>Let's get organized.</h1>
 			<a class="button primary large">
@@ -29,7 +29,7 @@
 			</a>
 			<img src="img/bg.png" class="dots">
 		</div>
-	</section> -->
+	</section>
 
 	<!-- Select Format -->
 	<!-- <section class="format">
@@ -99,7 +99,7 @@
 	</section> -->
 
 	<!-- Organize Data -->
-	<section class="organize">
+	<!-- <section class="organize">
 		<div class="list">
 			<div class="toggle">
 				<h3><span class="fa fa-sort-up"></span>Project Name<span class="fa fa-pencil"></span></h3>
@@ -202,7 +202,7 @@
 			<a href="" class="button primary">Action Button</a>
 			<a href="" class="button">Reset Filters</a>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- Footer -->
 	<footer>
