create application skeleton

--- a/index.html
+++ b/index.html
@@ -6,212 +6,7 @@
 	<link rel="stylesheet" href="css/global.css">
 </head>
 <body>
-
-	<!-- Header -->
-	<header>
-		<img src="img/flywheelLogo.svg" class="logo">
-		<!-- <img src="img/scitranLogo.png" class="logo"> -->
-		<div class="progress">
-			<a class="active"><span class="fa fa-check"></span>Upload Data</a>
-			<a href=""><span class="fa fa-circle-o"></span>Select Format</a>
-			<a href=""><span class="fa fa-circle-o"></span>Organize Data</a>
-			<a href=""><span class="fa fa-circle-o"></span>Save &amp; Export Data</a>
-		</div>
-	</header>
-
-	<!-- Upload -->
-	<section class="upload">
-		<div class="center">
-			<h1>Let's get organized.</h1>
-			<a class="button primary large">
-				<strong>Click here to select files</strong>
-				<small>Must be DICOM or NiFTi files only</small>
-			</a>
-			<img src="img/bg.png" class="dots">
-		</div>
-	</section>
-
-	<!-- Select Format -->
-	<!-- <section class="format">
-		<div class="center">
-			<h1>Select your format</h1>
-			<div class="card half">
-				<h2>SciTran</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eveniet error suscipit voluptatum, commodi.</p>
-				<h2>Data Format</h2>
-				<div class="data-format">
-					<span class="level-1">Project</span>
-					<span class="level-2">Project</span>
-					<span class="level-3">Project</span>
-				</div>
-				<a href="" class="button primary">Select SciTran Format</a>
-			</div>
-			<div class="card half">
-				<h2>SciTran</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eveniet error suscipit voluptatum, commodi.</p>
-				<h2>Data Format</h2>
-				<div class="data-format">
-					<span class="level-1">Project</span>
-					<span class="level-2">Project</span>
-					<span class="level-3">Project</span>
-				</div>
-				<a href="" class="button primary">Select SciTran Format</a>
-			</div>
-		</div>
-	</section> -->
-
-	<!-- Save & Upload -->
-	<!-- <section class="format">
-		<div class="center">
-			<h1>Save &amp; Export Data</h1>
-			<div class="card half">
-				<h2>Save to Hard Drive</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
-				<a href="" class="button primary">Save to Hard Drive</a>
-			</div>
-			<div class="card half">
-				<h2>Upload to Flywheel.io</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
-				<a href="" class="button secondary">Upload to Flwheel.io</a>
-			</div>
-		</div>
-	</section> -->
-
-	<!-- Save & Upload -->
-	<!-- <section class="format">
-		<div class="center">
-			<h1>Save &amp; Export Data</h1>
-			<div class="card">
-				<h2>Upload to Flywheel.io</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
-				<div class="form-group">
-					<label for="url">Flywheel URL</label>
-					<input type="text" id="url">
-				</div>
-				<div class="form-group">
-					<label for="url">Flywheel Login</label>
-					<a href="" class="button primary">Sign in with Google</a>
-				</div>
-				<div class="margin-40"></div>
-				<a href="" class="button secondary">Upload to Flwheel.io</a>
-			</div>
-		</div>
-	</section> -->
-
-	<!-- Organize Data -->
-	<!-- <section class="organize">
-		<div class="list">
-			<div class="toggle">
-				<h3><span class="fa fa-sort-up"></span>Project Name<span class="fa fa-pencil"></span></h3>
-				<div class="content">
-					<table class="clickable">
-						<thead>
-							<th width="20"><input type="checkbox"></th>
-							<th>Session Name</th>
-							<th width="200"># of Aquisitions</th>
-						</thead>
-						<tr>
-							<td><input type="checkbox"></td>
-							<td><span class="fa fa-sort-down"></span>Example</td>
-							<td>Example</td>
-						</tr>
-						<tr>
-							<td><input type="checkbox"></td>
-							<td><span class="fa fa-sort-down"></span>Example</td>
-							<td>Example</td>
-						</tr>
-						<tr>
-							<td><input type="checkbox"></td>
-							<td><span class="fa fa-sort-up"></span>Example</td>
-							<td>Example</td>
-							<tr class="no-click">
-								<td colspan="3">
-									<table>
-										<thead>
-											<th width="20"><input type="checkbox"></th>
-											<th>Aquisition Name</th>
-											<th>File Type</th>
-											<th width="200">Actions</th>
-										</thead>
-										<tr>
-											<td width="20"><input type="checkbox"></td>
-											<td>fMRI_Example_1</td>
-											<td>DICOM</td>
-											<td><span class="fa fa-download"></span></td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-						</tr>
-						<tr>
-							<td><input type="checkbox"></td>
-							<td><span class="fa fa-sort-down"></span>Example</td>
-							<td>Example</td>
-						</tr>
-						<tr>
-							<td><input type="checkbox"></td>
-							<td><span class="fa fa-sort-down"></span>Example</td>
-							<td>Example</td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<div class="toggle">
-				<h3><span class="fa fa-sort-down"></span>Another Project Name<span class="fa fa-pencil"></span></h3>
-			</div>
-			<div class="toggle">
-				<h3><span class="fa fa-sort-down"></span>Third Project Goes Right Here<span class="fa fa-pencil"></span></h3>
-			</div>
-			<div class="toggle">
-				<h3><span class="fa fa-sort-down"></span>And a Fourth<span class="fa fa-pencil"></span></h3>
-			</div>
-			<div class="toggle">
-				<h3><span class="fa fa-sort-down"></span>Last But Not Least<span class="fa fa-pencil"></span></h3>
-			</div>
-		</div>
-		<div class="sidebar">
-			<h2>Filter &amp; Sort</h2>
-			<div class="form-group">
-				<label for="search">Search</label>
-				<input type="text" placeholder="ie: example project">
-			</div>
-			<div class="form-group">
-				<label>Example</label>
-				<select>
-					<option>Select option</option>
-					<option>Example1</option>
-					<option>Example2</option>
-				</select>
-			</div>
-			<div class="form-group">
-				<label>Example</label>
-				<select>
-					<option>Select option</option>
-					<option>Example1</option>
-					<option>Example2</option>
-				</select>
-			</div>
-			<div class="form-group">
-				<label>Example</label>
-				<select>
-					<option>Select option</option>
-					<option>Example1</option>
-					<option>Example2</option>
-				</select>
-			</div>
-			<a href="" class="button primary">Action Button</a>
-			<a href="" class="button">Reset Filters</a>
-		</div>
-	</section> -->
-
-	<!-- Footer -->
-	<footer>
-		<a class="button disabled">Go Back</a>
-		<a href="" class="button primary"><strong>Next Step:</strong> <em>Select Format</em></a>
-	</footer>
-
-	<!-- View -->
-	<!-- <div ui-view></div> -->
+	<div ui-view class="full-view"></div>
 
 	<!-- script src="node_modules/angular/angular.min.js"/ -->
 	<script>
